--- a/assets/css/designTwo.css
+++ b/assets/css/designTwo.css
@@ -128,3 +128,48 @@ h1 + p {
   border: 1px solid hsl(0, 0%, 100%);
   border-radius: 33px;
 }
+
+/* ******************* MOBILE MEDIA QUERY ******************* */
+
+@media screen and (max-width: 675px) {
+  body {
+    height: 667px;
+    width: 375px;
+    box-sizing: border-box;
+    margin: 0 auto;
+  }
+
+  h1 {
+    width: 278px;
+  }
+
+  h1 + p {
+    width: 278px;
+  }
+
+  .card-body {
+    height: 543px;
+    width: 327px;
+  }
+
+  .littleStuff {
+    height: 30px;
+    width: 278px;
+  }
+
+  .littleStuff p {
+    font-size: 14px;
+  }
+
+  .creator {
+    width: 278px;
+  }
+
+  /* ******************* IMAGES ******************* */
+
+  .mainImage {
+    height: 278px;
+    width: 278px;
+    border-radius: 8px;
+  }
+}
