--- a/assets/css/designTwo.css
+++ b/assets/css/designTwo.css
@@ -26,15 +26,20 @@ p {
 
 h1 {
   height: 28px;
-  width: 302px;
+  width: 85%;
   font-size: 22px;
   font-weight: 600;
   color: hsl(0, 0%, 100%);
 }
 
+h1 span:hover {
+  color: hsl(178, 100%, 50%);
+  cursor: pointer;
+}
+
 h1 + p {
   height: 52px;
-  width: 302px;
+  width: 85%;
   font-weight: 300;
   color: hsl(215, 51%, 70%);
 }
@@ -55,7 +60,7 @@ h1 + p {
   display: flex;
   justify-content: space-between;
   height: 30px;
-  width: 302px;
+  width: 85%;
   display: flex;
   align-items: center;
 }
@@ -74,23 +79,32 @@ h1 + p {
 }
 
 .line {
-  width: 302px;
-  border-bottom: 1px solid hsl(215, 32%, 27%);
-  /* border-style: groove; */
+  height: 2px;
+  width: 85%;
+  background-color: hsl(215, 32%, 27%);
+  border: none;
 }
 
 .creator {
   font-weight: 300;
   height: 33px;
-  width: 302px;
+  width: 85%;
   display: flex;
   align-items: center;
-  color: hsl(0, 0%, 100%);
 }
 
 .creator span {
   color: hsl(215, 51%, 70%);
   margin-right: 5px;
+}
+
+#name {
+  color: hsl(0, 0%, 100%);
+}
+
+#name:hover {
+  color: hsl(178, 100%, 50%);
+  cursor: pointer;
 }
 
 .attribution {
@@ -105,8 +119,20 @@ h1 + p {
 .mainImage {
   height: 302px;
   width: 302px;
-  margin-top: 23px;
+  margin: 23px 0px;
   border-radius: 8px;
+  background-color: hsl(178, 100%, 50%);
+  position: relative;
+}
+
+.images {
+  position: relative;
+}
+
+.imgTwo {
+  position: absolute;
+  top: 0px;
+  left: 0px;
 }
 
 .littleStuff img[alt='Ethereum'] {
@@ -139,14 +165,6 @@ h1 + p {
     margin: 0 auto;
   }
 
-  h1 {
-    width: 278px;
-  }
-
-  h1 + p {
-    width: 278px;
-  }
-
   .card-body {
     height: 543px;
     width: 327px;
@@ -154,15 +172,10 @@ h1 + p {
 
   .littleStuff {
     height: 30px;
-    width: 278px;
   }
 
   .littleStuff p {
     font-size: 14px;
-  }
-
-  .creator {
-    width: 278px;
   }
 
   /* ******************* IMAGES ******************* */
