Continue Proj - Date: 02/02/2022

--- a/assets/css/designTwo.css
+++ b/assets/css/designTwo.css
@@ -204,6 +204,10 @@ h1 + p {
     font-size: 14px;
   }
 
+  .creator {
+    margin: 8px 0px;
+  }
+
   /* ******************* IMAGES ******************* */
   .images-container {
     height: 278px;
